# ready-player-pi

./: .gitignore  CMakeLists.txt  Makefile  README.md
ClientApp/: Client.cpp  ClientController.cpp  ClientController.h  ClientSocket.cpp  ClientSocket.h  CredentialsFile.h  GameFactory.h  GameSession.h
ClientApp/GyroPi/: GyroPiSession.cpp  GyroPiSession.h  GyroscopeReader.h  SPIDriver.hpp
ClientApp/NotePi/: NotePiSession.cpp  NotePiSession.h
ClientApp/NotePi/boundary/: MicrophoneDriver.cpp  MicrophoneDriver.h
ClientApp/NotePi/control/: FftAnalyzer.cpp  FftAnalyzer.h  FirFilter.cpp  FirFilter.h  NoteDetector.cpp  NoteDetector.h  SampleProcessor.cpp  SampleProcessor.h  SoundAnalyzer.cpp  SoundAnalyzer.h
ClientApp/NotePi/domain/: FilterCoeffs.h  NotePiConfig.h  NoteSequence.cpp  NoteSequence.h  PianoFrequencies.h
ClientApp/gui/: QtGui.cpp  QtGui.h
ClientApp/gui/base/: BaseMenu.cpp  BaseMenu.h
ClientApp/gui/menus/: GameSelectMenu.cpp  GameSelectMenu.h  GuestGameRoom.cpp  GuestGameRoom.h  GyroPiCommunicatorWindow.cpp  GyroPiCommunicatorWindow.h  GyroPiPerformerWindow.cpp  GyroPiPerformerWindow.h  GyroPiRoleAnnouncement.cpp  GyroPiRoleAnnouncement.h  HostGameRoom.cpp  HostGameRoom.h  JoinGameRoom.cpp  JoinGameRoom.h  MainWindow.cpp  MainWindow.h  NotePiCommunicatorWidget.cpp  NotePiCommunicatorWidget.h  NotePiPerformerWidget.cpp  NotePiPerformerWidget.h  NotePiRoleScreen.cpp  NotePiRoleScreen.h  ScoreboardScreen.cpp  ScoreboardScreen.h  UsernameMenu.cpp  UsernameMenu.h
ServerApp/: Game.h  GameRoom.cpp  GameRoom.h  Room.h  Scoreboard.h  ServerController.cpp  ServerController.h  ServerSocket.cpp  ServerSocket.h  server.cpp
ServerApp/GyroPi/: Ball.h  BlackHole.h  Course.h  GyroPi.h  GyroPiGame.h
ServerApp/NotePi/: NotePi.h  NotePiGame.h  SecretSequence.h
Shared/: JSONCommunication.h  NotePiProtocol.h  Player.h  Protocol.h
